--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,46 @@
-docopt
-pandas
-Pillow
-tornado==5.1.1
-pyinotify
-pyserial
-picamera
+absl-py==0.14.1
+asn1crypto==0.24.0
+astunparse==1.6.3
+backports.entry-points-selectable==1.1.0
+certifi==2018.8.24
+chardet==3.0.4
+cryptography==2.6.1
+distlib==0.3.2
+distro-info==0.21
+docopt==0.6.2
+entrypoints==0.3
+filelock==3.0.12
+flatbuffers==1.12
+gast==0.3.3
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.6
+importlib-metadata==4.8.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+keyring==17.1.1
+keyrings.alt==3.1.1
+numpy==1.21.2
+picamera==1.13
+Pillow==8.3.2
+platformdirs==2.3.0
+pybind11==2.7.1
+pycrypto==2.6.1
+pycurl==7.43.0.2
+PyGObject==3.30.4
+python-apt==1.8.4.3
+pyxdg==0.25
+requests==2.21.0
+SecretStorage==2.3.1
+six==1.15.0
+ssh-import-id==5.7
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow @ file:///tmp/tensorflow-2.4.0-cp37-none-linux_armv7l.whl
+tensorflow-estimator==2.4.0
+typing-extensions==3.7.4.3
+unattended-upgrades==0.1
+urllib3==1.24.1
+virtualenv==20.7.2
+zipp==3.5.0
