--- a/cloud/deployment.yaml
+++ b/cloud/deployment.yaml
@@ -121,8 +121,10 @@ metadata:
   labels:
     app: pmlcartrain-service
 spec:
+  type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
+    nodePort: 30007
   selector:
     app: pmlcartrain
